# kkarousel.bot

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/kkarousel_bot/: __init__.py  api_client.py  config.py  handlers.py  main.py
tests/: test_config.py  test_handlers.py  test_photo_handler.py
